--- a/config.toml
+++ b/config.toml
@@ -7,14 +7,17 @@ theme = "ananke"
 [[main.menu]]
 name = "Shop"
 weight = 1
+url = "/posts/ethan_week_4/"
 
 [[main.menu]]
 name = "Menu"
 weight = 1
+url = "/posts/ethan_week_4/"
 
 [[main.menu]]
-name = 'About Us'
+name = "About Us"
 weight = 1
+url = "/posts/ethan_week_4/"
 
 
 [build]
